# dusk-audio-plugins

./: .gitignore  CLAUDE.md  CLAUDE_CODE_INSTRUCTIONS.md  CMakeLists.txt  CMakePresets.json  DATASETS.md  PROFESSIONAL_UPGRADES.md  README.md  Review and Analysis.md  TapeMachineAliasingFix.h  rebuild_all.sh  toolchain_fast.cmake
.claude/commands/: release-plugin.md
.github/workflows/: build.yml  dpf-build.yml  dpf-release.yml  tapemachine2-release.yml
cmake/: GlobalSettings.cmake  JuceDefaults.cmake
docker/: Dockerfile.build  build_release.sh
docs/dpf-migration/: 00-OVERVIEW.md  09-multi-synth-inventory.md  09-multi-synth-presets.md  09-multi-synth-ui-spec.md  09-multi-synth.md  09-sunset-circuits-qa-checklist.md
manuals/: 4k-eq.md  chord-analyzer.md  multi-comp.md  multi-q.md  sunset-circuits.md  tapemachine-2.md  tapemachine.md
manuals/screenshots/tapemachine/: README.md
plugins/: precompiled.h
plugins/4k-eq/: CMakeLists.txt  FourKEQ.cpp  FourKEQ.h  FourKLookAndFeel.cpp  PluginEditor.cpp  PluginEditor.h  README.md
plugins/4k-eq/Source/: SpectrumAnalyzer.h
plugins/4k-eq/core/: ConsoleSaturationCore.h  FourKEQDSP.cpp  FourKEQDSP.hpp
plugins/4k-eq/dpf-plugin/: CMakeLists.txt  DistrhoPluginInfo.h  FourKEQAccess.hpp  FourKEQParams.hpp  FourKEQPlugin.cpp  FourKEQUI.cpp
plugins/DuskAmp/: CMakeLists.txt
plugins/DuskAmp/src/: ParamIDs.h  PluginProcessor.cpp  PluginProcessor.h
plugins/DuskVerb/: CMakeLists.txt
plugins/DuskVerb/src/: FactoryPresets.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StereoImagePresets.h
plugins/DuskVerb/tests/: test_stereo_image.cpp
plugins/DuskVerb/tools/: perceptual_diff.py  sweep_dattorro_vvp.py  sweep_decay_vvp.py  sweep_perceptual.py
plugins/StudioReverb/: CMakeLists.txt  fix_freeverb_headers.sh
plugins/StudioReverb/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/StudioVerb/: CMakeLists.txt  DattorroReverb.h  FreverbAlgorithm.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ReverbEngineEnhanced.cpp  ReverbEngineEnhanced.h
plugins/TapeMachine/: CMakeLists.txt  README.md
plugins/TapeMachine/Source/: ImprovedTapeEmulation.cpp  ImprovedTapeEmulation.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TapeMachinePresets.h
plugins/TapeMachine/core/: PORT_NOTES.md  TapeMachineDSP.cpp  TapeMachineDSP.hpp
plugins/TapeMachine/dpf-plugin/: CMakeLists.txt  DistrhoPluginInfo.h  TapeMachineAccess.hpp  TapeMachineParams.hpp  TapeMachinePlugin.cpp  TapeMachinePresets.hpp  TapeMachineUI.cpp
plugins/VintageVerb/: CMakeLists.txt
plugins/VintageVerb/DSP/: DualEngineRouter.cpp  DualEngineRouter.h  ReverbEngine.cpp  ReverbEngine.h  SimpleReverbEngine.cpp  SimpleReverbEngine.h  VintageColoration.cpp  VintageColoration.h
plugins/VintageVerb/Presets/: PresetManager.cpp  PresetManager.h
plugins/VintageVerb/Source/: PluginEditor.cpp  PluginEditor.h  PluginEditor_new.cpp  PluginProcessor.cpp  PluginProcessor.h
plugins/chord-analyzer/: CMakeLists.txt
plugins/chord-analyzer/Source/: ChordRecorder.cpp
plugins/convolution-reverb/: ConvolutionEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/groovemind/Source/: DrummerEngine.cpp  PluginProcessor.cpp
plugins/harmonic-generator/: CMakeLists.txt  HardwarePresets.h  HarmonicGeneratorPlugin.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/multi-comp/: AnalogLookAndFeel.cpp  AnalogLookAndFeel.h  AutoGainMatcher.h  CMakeLists.txt  CompressorPresets.h  EnhancedCompressorEditor.cpp  OptoGainMapping.h  UniversalCompressor.cpp  UniversalCompressor.h  UniversalCompressorTests.cpp  multicomp.cpp
plugins/multi-comp/HardwareEmulation/: ConvolutionEngine.h  HardwareMeasurements.h
plugins/multi-comp/core/: BusCompressor.hpp
plugins/multi-q/: BritishEQProcessor.h  CMakeLists.txt  ConsoleSaturation.h  EQGraphicDisplay.cpp  MultiQ.cpp
plugins/multi-synth/core/tests/: CMakeLists.txt  _harness.py  acid_gate.py  alias_gate.py  arp_gate.py  env_gate.py  pitch_gate.py  render_test.cpp  reverb_gate.py  run_all.sh
plugins/multi-synth/core/tests/acid/: _acid.py  acid_test.cpp  run_all.sh  seq_gate.py  slide_gate.py  slope_gate.py
plugins/multi-synth/core/tests/fm/: alias_gate.py  feedback_gate.py  fm_test.cpp  run_all.sh  spectrum_gate.py
plugins/multi-synth/core/tests/presets/: preset_audit.py  preset_render.cpp
plugins/shared/: DryWetMixer.h  DspUtils.h  DuskLookAndFeel.h  Oversampling.h  PatreonBackers.h  ScalableEditorHelper.h  SpringEngine.cpp  SpringEngine.h
plugins/shared-dpf/: DuskAccessBridge.hpp
plugins/sunset-circuits/: Arpeggiator.h  MultiSynth.cpp  MultiSynth.h  MultiSynthEditor.cpp  MultiSynthVoice.h
plugins/sunset-circuits/core/tests/: CMakeLists.txt  _harness.py  acid_gate.py  cpu_bench.cpp  env_gate.py  pitch_gate.py  render_test.cpp  reverb_gate.py  run_all.sh  stuck_gate.py  user_preset_gate.py  user_preset_test.cpp
plugins/sunset-circuits/core/tests/acid/: CMakeLists.txt  accent_gate.py  acid_test.cpp  scream_gate.py  seq_gate.py  slide_gate.py  slope_gate.py
plugins/sunset-circuits/core/tests/fm/: CMakeLists.txt  _fm.py  alias_gate.py  env_gate.py  fm_test.cpp  run_all.sh  spectrum_gate.py
plugins/sunset-circuits/core/tests/presets/: preset_audit.py  preset_render.cpp
plugins/sunset-circuits/dpf-plugin/: CMakeLists.txt  DistrhoPluginInfo.h  MultiSynthAccess.hpp  MultiSynthParams.hpp  MultiSynthPlugin.cpp  MultiSynthUI.cpp  UserPresetStore.hpp
plugins/sunset-circuits/dpf-plugin/tools/: gen_params.py  lv2_smoke.c
plugins/universal-compressor/: AnalogAuthenticity.md  AnalogLookAndFeel.cpp  AnalogLookAndFeel.h  CMakeLists.txt  EnhancedCompressorEditor.cpp  EnhancedCompressorEditor.h  ModernCompressorPanels.h  ProfessionalCompressor.h  UniversalCompressor.cpp  UniversalCompressor.h  UniversalCompressorTests.cpp  UpdatedCompressorModes.h
scripts/: update-patrons.py
shared/: LunaVintageLookAndFeel.h
tests/duskverb_render/: CMakeLists.txt  render.cpp
(+240 files in other folders)
